test_src/compiler_errors/types/demotion/DemoteLongToInt.b
class DemoteLongToInt {
    void test() {
        Int value = 100L;
        println(value);
    }
}
